# mcp-market

./: pyproject.toml
mcp_market/: __init__.py  main.py
mcp_market/models/: server.py
mcp_market/routers/: servers.py
mcp_market/services/: server_manager.py
